# qahwa

./: .env.example  .gitignore  README.md  package.json  platformio.ini  pyproject.toml  requirements_dev.txt  setup.cfg
src/: server.js
src/cpp/: config.h  http_client.h  led_feedback.h  main.cpp  rfid_reader.h  wifi_manager.h
src/db/: database.js
src/middleware/: auth.js
src/qahwa/: main.py
src/routes/: api.js  auth.js  dashboard.js
tests/: test_main.py
