[metadata]
name = qahwa
author = Fabian Hofmann
author_email = fabian.hofmann@jku.at
description = RFID Coffee Counter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CTO-JKU/qahwa.git
classifiers =
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent

[options]
packages = qahwa
install_requires =
    pymongo==4.15.1
python_requires = >=3.7
package_dir =
    = src
zip_safe = no

[options.extras_require]
testing =
    flake8==3.9.2
    tox==3.24.4
    pytest==6.2.5
    pytest-cov==2.12.1
    mypy==0.910

[options.package_data]
qahwa = py.typed

[flake8]
max-line-length = 160